# imaginer-story

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
storyai/: cli.py  context.py  domain.py  models.py  server.py  services.py  settings.py
storyai/alembic/versions/: 251e67657130_init.py  6a12265e8844_add_prompt.py  a5d6ae90126a_insert_prompts.py
storyai/proto/: __init__.py  imaginer.proto  imaginer_pb2.py  imaginer_pb2.pyi  imaginer_pb2_grpc.py
storyai/routes/: __init__.py  images.py  persona.py  synopsis.py
storyai/services/: __init__.py  dreambooth_service.py  image_storage_service.py  persona_service.py  synopsis_service.py
supabase/: config.toml
supabase/migrations/: 20240109082536_create_character_table.sql  20240110065547_insert_images_bucket.sql
website/: package.json  tailwind.config.js
website/public/: index.html  manifest.json
website/src/: apis.ts  index.tsx  types.d.ts
website/src/app/: character.tsx  root.tsx  synopsis.tsx
website/src/components/: Button.tsx  Icons.tsx  Layout.tsx  Notification.tsx  ProfileImage.tsx
website/src/util/: constants.ts
webui/: .env.temp  next.config.js  package.json
webui/src/app/: layout.tsx  page.tsx
webui/src/app/character/: layout.tsx  page.tsx
webui/src/app/synopsis/: layout.tsx  page.tsx
webui/src/components/: Button.tsx  Dropdown.tsx  Header.tsx  Input.tsx  Layout.tsx  Notification.tsx
webui/src/types/: backend.d.ts  db.d.ts
webui/src/util/: constants.ts
