[tool.poetry]
name = "storyai"
version = "0.1.0"
description = ""
authors = ["1dennispark <dennis.park@paust.io>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "storyai", from = "." },
]
exclude = ['storyai/tests/*.py']

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.5.0"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.2"
typer = "^0.9.0"
pydantic-settings = "^2.1.0"
fastapi = "^0.108.0"
httpx = "^0.26.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
oci = "^2.118.2"
python-multipart = "^0.0.6"
mysqlclient = "^2.2.1"

[tool.poetry.scripts]
storyai = 'storyai.cli:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
